Implemented Some Mathematics

--- a/Mathematics For ML/Math's Deeplearning.AI/Class_One.ipynb
+++ b/Mathematics For ML/Math's Deeplearning.AI/Class_One.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "40245623-4d54-4170-95d1-545b63543970",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "a982323c-29b5-4e8c-bf1e-e3c5162dba29",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last Updated:2026-01-31 20:18:10.657278\n"
+      "Last Updated:2026-02-01 09:44:28.934715\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "7c041fd8-42a9-48bc-bb1c-907e42030af3",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "c2969fe7-c71e-4d0e-8590-8dabe67a197f",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "206f40c0-2f72-486a-95ef-d33d0f4e717e",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "319bb6b7-4df8-4629-a505-3fd86938b4dc",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
        "array([10,  3,  6,  9,  5,  7])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "7b568be7-d003-4d13-a0d6-1b535f7ea498",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
        "1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "2ae586da-f7c1-4279-b043-7215a094bf2e",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "array([0, 1, 2, 3])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "753c73af-c740-49ef-a539-6e8f21b589ce",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
        "array([ 1,  4,  7, 10, 13, 16, 19])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "487753e3-6e96-4538-b116-4f2510c37c9b",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "array([  0.,  25.,  50.,  75., 100.])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "752399dd-1dc6-4214-b376-ba219bee1c56",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
        "array([ 0, 25, 50, 75])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "07e47c24-f870-418c-b3de-e51072dad7e7",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "array([  0,  25,  50,  75, 100])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "c09e4d6d-f4f7-456c-8117-36dc6c841f70",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "eaf5b3c7-cdab-4d6f-b939-1dd200328671",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "2099d001-7bcd-4564-8ae0-aa6c78f01a3c",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "id": "981004d6-8757-4481-b07e-8aa8010b2f08",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
        "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "id": "2a781743-4a88-4597-88b7-6eeb0f3e4e2f",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
        "       2.29178686e-312])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,17 +367,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "id": "da03e0da-f933-44cb-aafd-9bb930ed3042",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.58454838, 0.68591203, 0.1360962 ])"
+       "array([0.48705996, 0.2702934 , 0.85598589])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "id": "c0006250-78fa-4e6b-b0ab-0fe7065bc188",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
        "       [30, 20, 10]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "id": "af806630-b790-415a-b7ff-a8d773546635",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
        "       [ 9,  5,  7]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,13 +441,13 @@
    "source": [
     "# An alternative way to create a multidimensional array is by reshaping the initial 1-D array.\n",
     "# Using np.reshape() you can rearrange elements of the previous array into a new shape.\n",
-    "muliti_dim_arr = one_dim_arr.reshape(2,3) # or np.reshape(one_dim_arr,(2,3))\n",
+    "multi_dim_arr = one_dim_arr.reshape(2,3) # or np.reshape(one_dim_arr,(2,3))\n",
     "multi_dim_arr # reshaping will work only if (array to reshape) = (given shape) *number wise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "id": "1cb64f95-6e18-436a-bb38-584caa279d3f",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
        "(6, (6,), 2)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "id": "3242e7b2-11bb-46b7-a6f9-5e8c926ac10a",
    "metadata": {},
    "outputs": [],
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "id": "db832942-c763-4601-a191-63d9e228fe14",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        " array([1.        , 1.66666667, 1.8       , 1.85714286, 1.88888889]))"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "id": "d5cdb82f-c81e-4075-b063-2e768a6075cd",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
        "       [ 8. ,  9.6, 11.2, 12.8]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "id": "44baa1ee-bfc1-4317-b266-5cb6dc534e45",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
        "\"Indexing is very useful as it allows to select specefic elements from an array. It also let us select\\n entire rows/columns or planes as you'll see in future assignments for multidimentional arrays\""
       ]
      },
-     "execution_count": 34,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,17 +567,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "6c4fdea2-7e3d-4cdc-9f74-c669bdfb5041",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([5, 5, 3, 2], dtype=int32), np.int32(3))"
+       "(array([6, 5, 7, 7], dtype=int32), np.int32(7))"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "6b305644-30cb-4d03-8980-76ba4d40b06f",
    "metadata": {},
    "outputs": [
@@ -603,7 +603,7 @@
        " 2)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "id": "8c2930a5-22df-4d2c-bcf2-9d53f9f4e4c0",
    "metadata": {},
    "outputs": [
@@ -626,7 +626,7 @@
        "np.int64(20)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "id": "21153dde-6e58-4ccb-88d7-fe3a8b0b4038",
    "metadata": {},
    "outputs": [
@@ -648,7 +648,7 @@
        "np.int64(30)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "4b34f327-743c-464a-b005-8dc7ebf1eb4a",
    "metadata": {},
    "outputs": [
@@ -670,7 +670,7 @@
        "array([30, 20])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,16 +681,257 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "9833ddb7-8a05-4deb-ae5a-141e28ded02d",
+   "id": "1228b002-129a-4ef9-872c-a8103141ccc9",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Difference between indexing and slicing is slicing works better on multidimentional array \n",
+    "### Slicing is end exclusive. syntax: [Start:End:Stop]\n",
+    "### Default Start = 0  and end = length of array - 1 also by default the step is 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "c5e33852-59ef-4cf9-9b2a-b847192094a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[16,  0,  4, 15],\n",
+       "       [ 1, 19, 18, 12]], dtype=int32)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Slice the two_dim array to get the first two rows\n",
+    "ran_tda = np.random.randint(0,20,size=(4,4))\n",
+    "ran_tda[2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "0f2170f9-9eac-4234-b0b6-bd1613f0866d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[13, 16,  2,  0],\n",
+       "       [11,  4, 12,  6],\n",
+       "       [16,  0,  4, 15],\n",
+       "       [ 1, 19, 18, 12]], dtype=int32)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ran_tda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "070646ff-54a3-4bae-9e83-39b4191b6e30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[13, 16,  2,  0],\n",
+       "       [11,  4, 12,  6],\n",
+       "       [16,  0,  4, 15],\n",
+       "       [ 1, 19, 18, 12]], dtype=int32)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ran_tda[:] ## ran_tda == ran_tda[:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "2e06df0a-1f09-4d4f-ad2b-47bc3d1ae848",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[13, 16,  2,  0],\n",
+       "       [11,  4, 12,  6],\n",
+       "       [16,  0,  4, 15],\n",
+       "       [ 1, 19, 18, 12]], dtype=int32)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ran_tda[::] # ran_tda == ran_tda[:] == ran_tda[::]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "6f8f62e5-9d11-4e0c-bb57-1320f8d08836",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([16,  4,  0, 19], dtype=int32)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ran_tda[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "87355635-0d43-4342-9a4a-ce12acdd7422",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stacking \n",
+    "# Stacking is the feature of Numpy that leads to increased customizaiton of arrays.\n",
+    "# It means to join two or more arrays, either horizontally or vertically. Meaning that it's done along a new axis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "d7c6414f-1b78-4afb-8a35-aab8a7966771",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.vstack() - stack vertically \n",
+    "# np.hstack() - stack horizontally \n",
+    "# np.hsplit() - splits an array into several smaller arrays. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "da00a924-2d58-454e-9c1c-3f526718a998",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[10,  9, 10,  9],\n",
+       "        [ 9, 11, 10,  9]], dtype=int32),\n",
+       " array([[12, 13, 12, 11],\n",
+       "        [13, 10, 11, 10]], dtype=int32))"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a1 = np.random.randint(8,12,size=(2,4))\n",
+    "a2 = np.random.randint(10,14,size=(2,4))\n",
+    "a1,a2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "c4dd08cd-e87a-427b-8a10-830302661760",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10,  9, 10,  9],\n",
+       "       [ 9, 11, 10,  9],\n",
+       "       [12, 13, 12, 11],\n",
+       "       [13, 10, 11, 10]], dtype=int32)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vert_arr = np.vstack((a1,a2))\n",
+    "vert_arr   ## It glues two arrays vertically"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "d15264e6-aac6-46a1-933f-ce6dc9eb65a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10,  9, 10,  9, 12, 13, 12, 11],\n",
+       "       [ 9, 11, 10,  9, 13, 10, 11, 10]], dtype=int32)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hor_arr = np.hstack((a1,a2))\n",
+    "hor_arr   ## It glues arrays horizontally"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "84e8975d-284e-4a95-99a8-d58153c49c56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Is there a difference between np.zeros() and np.empty()? Select one of the options given:\n",
+    "\n",
+    "    # A. No difference, they both output arrays of zeros.\n",
+    "    # B. np.zeros() is not initialized, but gives an output of zeros.\n",
+    "    # C. np.zeros() is faster to execute than np.empty().\n",
+    "    # D. np.empty() outputs an uninitialized array, but np.zeros() outputs an initialized array of value zero."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c9c11a4-6824-4300-92e0-62ffc5f5060a",
+   "metadata": {},
+   "source": [
+    "### The answer is \"D\""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51967d21-2c36-4221-9fa7-66016c252239",
+   "id": "202aacdd-d63d-4907-92eb-6955d1cb2d09",
    "metadata": {},
    "outputs": [],
    "source": []
