Mathematics For Machine Learning by Standford University

--- a/Mathematics For ML/Math's Deeplearning.AI/C2W1.ipynb
+++ b/Mathematics For ML/Math's Deeplearning.AI/C2W1.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "c71bba98-118a-454b-be8b-961fb301cb25",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last Updated:2026-02-02 22:42:34.966309\n"
+      "Last Updated:2026-02-15 11:55:06.449737\n"
      ]
     }
    ],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "e92591aa-32e3-4bee-834a-d25d20aead61",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "23e5405c-1dec-4519-bd41-1576bfbcb246",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "((2,), (2, 2), (2,))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "3cdd67bc-3b41-47ca-addf-650c49c4515d",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "4b44519b-eae7-423c-93f4-bd2b9494a279",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "ea53792d-c0df-46d6-b267-f37369d83ca0",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "0428dfc6-4fa6-4209-9e96-2592cc6e4cf1",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "44f1fe3e-8e90-4b4f-bd0d-d767b650a4ee",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
        " array([7, 1]))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "67bda888-06ea-40f5-9923-ba3fa92cda40",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
        "((2,), (2, 2))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "54032dee-081e-48c3-8d8f-c58b68e994e3",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "f5d59faf-be97-40a0-b1ed-a3354ec94832",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
        "       [ 3,  2,  1]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "84d75834-1e1e-4360-87f9-a333f0b2e4c0",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
        "(array([-1,  3,  7]), array([3, 2, 1]))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "1644c62c-78e3-47ea-ba0e-304f4134221c",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
        "       [ 0,  1,  2]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "aebab1e0-dac4-4c43-bd94-ec259ed124a6",
    "metadata": {},
    "outputs": [],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "cd42e111-4757-47b9-b9b6-43cabdbdefce",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "638064c4-34d8-4b59-adb4-eec079b3951c",
    "metadata": {},
    "outputs": [
@@ -514,50 +514,264 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e37fa59a-330c-4951-914d-9ab04f833d39",
+   "id": "b73f2bbb-4f72-4b18-9e5b-af64dbf81f39",
    "metadata": {},
    "source": [
-    " #### Given another system of linear equations:\n",
     "$$\n",
     "\\begin{cases}\n",
-    "-x_1 + 3x_2 = 7,\\\\ \n",
+    "-x_1 + 3x_2 = 7, \\\\\n",
     "3x_1 - 9x_2 = 1\n",
-    "\\end{cases}\n",
+    "\\end{cases} \n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "eb42d693-2ee9-4913-93f8-509ca247bf34",
+   "execution_count": 20,
+   "id": "dc35577f-a3c2-4f00-b116-2c1637d2a516",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Determinant of A_1 is:0.0\n"
+      "Determinant of A is: 0.0\n"
      ]
     }
    ],
    "source": [
-    "# Lets Find out the determinant of the corresponding matrix,\n",
-    "A_1 = np.array([[-1,3],\n",
-    "                [3,-9]],dtype = int)\n",
-    "b_1 = np.array([7,1],dtype = int)\n",
-    "det_A_1 = np.linalg.det(A_1)\n",
-    "print(f\"Determinant of A_1 is:{det_A_1}\")"
+    "# Let's find out the determinant of the corresponsding matrix \n",
+    "A = np.array([[-1,3],[3,-9]])\n",
+    "b = np.array([7,1])\n",
+    "det_A = np.linalg.det(A)\n",
+    "print(f\"Determinant of A is: {det_A}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "133eddee-2813-409c-b95e-8557f8ae2ea8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LinAlgError",
+     "evalue": "Singular matrix",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mLinAlgError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# That means it has no solution and will return an error . \u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlinalg\u001b[49m\u001b[43m.\u001b[49m\u001b[43msolve\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\numpy\\linalg\\_linalg.py:471\u001b[39m, in \u001b[36msolve\u001b[39m\u001b[34m(a, b)\u001b[39m\n\u001b[32m    468\u001b[39m signature = \u001b[33m'\u001b[39m\u001b[33mDD->D\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m isComplexType(t) \u001b[38;5;28;01melse\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33mdd->d\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m    469\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m errstate(call=_raise_linalgerror_singular, invalid=\u001b[33m'\u001b[39m\u001b[33mcall\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    470\u001b[39m               over=\u001b[33m'\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m'\u001b[39m, divide=\u001b[33m'\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m'\u001b[39m, under=\u001b[33m'\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m471\u001b[39m     r = \u001b[43mgufunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msignature\u001b[49m\u001b[43m=\u001b[49m\u001b[43msignature\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    473\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m wrap(r.astype(result_t, copy=\u001b[38;5;28;01mFalse\u001b[39;00m))\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\numpy\\linalg\\_linalg.py:163\u001b[39m, in \u001b[36m_raise_linalgerror_singular\u001b[39m\u001b[34m(err, flag)\u001b[39m\n\u001b[32m    162\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_raise_linalgerror_singular\u001b[39m(err, flag):\n\u001b[32m--> \u001b[39m\u001b[32m163\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m LinAlgError(\u001b[33m\"\u001b[39m\u001b[33mSingular matrix\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mLinAlgError\u001b[39m: Singular matrix"
+     ]
+    }
+   ],
+   "source": [
+    "# That means it has no solution and will return an error . \n",
+    "np.linalg.solve(A,b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cea39fd9-03b1-48e8-802b-073ed56f8fb7",
+   "metadata": {},
+   "source": [
+    "# 4 - System of Linear Equations with infinite number of solutions \n",
+    "### Changing free co-efficiant of the system (5) you can bring it to consistency. \n",
+    "$$\n",
+    "\\begin {cases}\n",
+    "-x_1 + 3x_2 = 7, \\\\\n",
+    "3x_1 - 9x_2 = -21\n",
+    "\\end {cases}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1d339e62-4ef2-43ae-8391-4acaf0c96916",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Need to specify the co - efficiant and values \n",
+    "A = np.array([[-1,3],[3,-9]])\n",
+    "b = np.array([7,-21])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "53e016c3-d3f5-4515-8acd-bc8ddf787fd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((2, 2), (2,))"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(A),b.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f03687a0-e62f-4e47-9f5e-737402e8e3af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 1)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# reshaping b \n",
+    "b = b.reshape(2,1)\n",
+    "b.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "cdf5eea9-4848-4cf7-9a79-d60a2849d54b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -1,   3,   7],\n",
+       "       [  3,  -9, -21]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## now we have make the whole equation look like a matrix \n",
+    "## In order to do that we need to use hstack()\n",
+    "aug_matrix = np.hstack((A,b))\n",
+    "aug_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "35517658-3c2c-49c0-a160-78ae50956f76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-1,  3,  7]), array([  3,  -9, -21]))"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Now we need to use the elimination method to get the value of algebra \n",
+    "# make a copy not to disrupt original one\n",
+    "aug_matrix_new = aug_matrix.copy()\n",
+    "aug_matrix_new[0],aug_matrix_new[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "fcf3ffff-455f-413a-b6d9-17c185038eaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1,  3,  7],\n",
+       "       [ 0,  0,  0]])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aug_matrix_new[1] = aug_mat_new[0] * 3 + aug_matrix_new[1]\n",
+    "aug_matrix_new"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a04c76e4-6a31-413f-97b3-ccc75ab3760b",
+   "metadata": {},
+   "source": [
+    "### Now second equation has no solution as it is 0 = 0\n",
+    "### First equation should be as it is : \n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "-x_1 + 3x_2 = 7\n",
+    "\\end{cases}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "20f855b2-f80a-432f-a569-44ec647e4adc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_2 = aug_matrix_new[1,0]\n",
+    "x_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8c3d627-eead-4e06-b18a-2237353cef0d",
+   "metadata": {},
+   "source": [
+    "### so the equation should be: \n",
+    "$$\n",
+    "\\begin {cases}\n",
+    "x_1 = 3x_2 - 7\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "### Here x_2 can be any number"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c6dcc7a-8842-42d4-94f0-23d559424c45",
+   "id": "a42d0799-2787-49c9-aa95-40a190f7c0a5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#"
-   ]
+   "source": []
   }
  ],
  "metadata": {
